// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-button Should render a button with an id 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--primary" id="identifier" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case controls 1`] = `
<mg-button aria-controls="element-controlled" aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case expanded false 1`] = `
<mg-button aria-expanded="false" aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case expanded true 1`] = `
<mg-button aria-expanded="true" aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case haspopup false 1`] = `
<mg-button aria-haspopup="false" aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case haspopup true 1`] = `
<mg-button aria-haspopup="true" aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case pressed false 1`] = `
<mg-button aria-label="label" aria-pressed="false" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case pressed true 1`] = `
<mg-button aria-label="label" aria-pressed="true" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type button 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0" type="button">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type reset 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0" type="reset">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render a button, case type submit 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0" type="submit">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--danger" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--danger mg-button--icon" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--danger-alt" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an danger-alt button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--danger-alt mg-button--icon" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--flat" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an flat button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--flat mg-button--icon" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--info" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an info button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--icon mg-button--info" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an primary button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--icon mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--secondary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an secondary button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--icon mg-button--secondary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon false 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--success" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button Should render an success button isIcon true 1`] = `
<mg-button aria-label="label" class="mg-button mg-button--icon mg-button--success" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 1`] = `
<mg-button class="mg-button mg-button--primary" id="identifier" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 2`] = `
<mg-button class="mg-button mg-button--primary" id="identifier" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should NOT disable button after click 3`] = `
<mg-button aria-disabled="true" class="mg-button mg-button--primary" id="identifier" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 1`] = `
<mg-button class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 2`] = `
<mg-button aria-disabled="true" class="mg-button mg-button--loading mg-button--primary" role="button" tabindex="-1">
  <mock:shadow-root>
    <mg-icon icon="loader" spin=""></mg-icon>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should disable button after click 3`] = `
<mg-button aria-disabled="false" class="mg-button mg-button--primary" role="button" tabindex="0">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;

exports[`mg-button prevent double click should not have fn when disabled 1`] = `
<mg-button aria-disabled="true" class="mg-button mg-button--primary" role="button" tabindex="-1">
  <mock:shadow-root>
    <div class="mg-button__content">
      <slot></slot>
    </div>
  </mock:shadow-root>
  Text button
</mg-button>
`;
